--- a/Transparency-One/app/src/main/AndroidManifest.xml
+++ b/Transparency-One/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
         android:icon="@drawable/logo_big"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name="GlobalVariable">
         <activity
             android:name=".Activities.MainActivity"
             android:icon="@mipmap/ic_launcher">
