--- a/Transparency-One/app/src/main/AndroidManifest.xml
+++ b/Transparency-One/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.oussa.transparency_one">
+    package="com.transparency_one">
 
     <application
         android:allowBackup="true"
